--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-SSLify==0.1.5
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
 MarkupSafe==2.0.1
 numpy==1.21.2
 pandas==1.3.2
@@ -13,4 +14,5 @@ python-dateutil==2.8.2
 pytz==2021.1
 six==1.16.0
 tenacity==8.0.1
+urllib3==1.26.6
 Werkzeug==2.0.1
