--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -32,17 +32,17 @@ jobs:
     
     - name: Build
       run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/microservice2:latest .
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/sharpvalues1:latest .
 
     - name: Push
       run: |
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/microservice2:latest
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/sharpvalues1:latest
 
     - name: Deploy
       run: |
-        gcloud run deploy microservice2  \
+        gcloud run deploy sharpvalues1  \
         --region northamerica-northeast1  \
-        --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/microservice2  \
+        --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/sharpvalues1  \
         --platform managed \
         --allow-unauthenticated \
         --project ${{ secrets.GCP_PROJECT_ID }} \
